Refactor in new IDE IntelliJ IDEA
Because of problems in old environment, I switched to IntelIJ
which is more suitable for Java.
I decided to refactor whole project and start again with basic UI
based on FXML and recommended tooltips for JavaFX